--- a/Axle.csproj
+++ b/Axle.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="GroupDocs.Parser" Version="21.5.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0-release-20210626-04"/>
+    <PackageReference Include="xunit" Version="2.4.1"/>
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.1.build3958"/>
+  </ItemGroup>
 </Project>
