--- a/Axle.csproj
+++ b/Axle.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="xunit" Version="2.4.1"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.1.build3958"/>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.0"/>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.36"/>
   </ItemGroup>
 </Project>
