--- a/Axle.csproj
+++ b/Axle.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.0"/>
     <PackageReference Include="itext7" Version="7.1.16"/>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.36"/>
+    <PackageReference Include="Porter2Stemmer" Version="1.0.0"/>
   </ItemGroup>
 </Project>
