add search engine to expose functionality

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "SearchEngineConfig": {
+    "StopWordsFilePath": "Engine/resources/stopwords.txt",
+    "DocumentsDirectory": "/wwwroot/uploads/",
+    "DatabaseConnectionURI": "mongodb://localhost:27017",
+    "DatabaseName": "Axle"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
