--- a/Axle.csproj
+++ b/Axle.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0-release-20210626-04"/>
-    <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.1"/>
     <PackageReference Include="xunit" Version="2.4.1"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.1.build3958"/>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.0"/>
     <PackageReference Include="itext7" Version="7.1.16"/>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.36"/>
     <PackageReference Include="Porter2Stemmer" Version="1.0.0"/>
+    <PackageReference Include="Cronos" Version="0.7.1"/>
   </ItemGroup>
 </Project>
