--- a/Axle.csproj
+++ b/Axle.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.36"/>
     <PackageReference Include="Porter2Stemmer" Version="1.0.0"/>
     <PackageReference Include="FreeSpire.Presentation" Version="4.11.0"/>
+    <PackageReference Include="FreeSpire.Doc" Version="7.11.0"/>
   </ItemGroup>
 </Project>
