--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,8 @@ version: "3.7"
 services:
   ui:
     container_name: axle-ui
+    depends_on:
+      - server
     build:
       context: ./ui
       dockerfile: Dockerfile.prod
@@ -10,15 +12,19 @@ services:
       - 3000:80
   server:
     container_name: axle-server
+    depends_on:
+      - db
     build:
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.prod
     ports:
-      - 5000:5000
-      - 5001:5001
-  mongodb:
+      - 5000:80
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - "SearchEngineConfig:DatabaseConnectionURI=mongodb://axle-db:27017"
+  db:
     image: mongo
-    container_name: axle-mongodb
-    volumes:
+    container_name: axle-db
       - /data/db:/data/db
     ports:
       - 27017:27017
